lambda/tests/compile-fail/non-async-main.stderr
error: the async keyword is missing from the function declaration
 --> $DIR/non-async-main.rs:3:1
  |
3 | fn main() {}
  | ^^

error: cannot find attribute macro `lambda` in this scope
 --> $DIR/non-async-main.rs:1:3
  |
1 | #[lambda]
  |   ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/non-async-main.rs`

For more information about this error, try `rustc --explain E0601`.
